# nostril

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  GNUmakefile  Makefile  README  build.rs  cargo.mk  configurator.c  gnostr-js  hex.h  index.html  make-secp256k1.sh  mempool_space_bot  nostril-js  nostril.c  post-commit-history  random.h  shell.nix  vinux-cli.c
.github/workflows/: alpine.yml  build-install-matric.yml  build-install-matrix.yml  c-cpp.yml  ci.yml  docker.yml  gnostr-docker.yml  macos-pre-release.yml  macos-release.yml  pre-release.yml  ubuntu-matrix.yml  ubuntu-pre-release.yml  ubuntu-release.yml
doc/: nostril.1
nostril.xcodeproj/: project.pbxproj
nostril.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
nostril.xcodeproj/xcshareddata/xcschemes/: nostril.xcscheme
nostril.xcodeproj/xcuserdata/git.xcuserdatad/xcschemes/: xcschememanagement.plist
scripts/: commit-event
src/: lib.rs
